# spotify_to_yotube

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 31b1ed9f9adb_fix_relations_between_models.py  355bf8a8cf03_create_tables.py
config/: config.py  database.py
models/: relations.py  user.py  yt_account.py  yt_playlist.py  yt_track.py
schemas/: user.py  yt_account.py  yt_playlist.py  yt_track.py
