
[project]
name = "spotify_to_youtube"
description = "API to convert spotify playlist to youtube music playlist and vice versa"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    { name = "Jerudiel Ortiz", email = "jerudiel.ortiz@gmail.com" },
]

[tool.isort]
profile = "black"
known_third_party = ["fastapi", "pydantic", "starlette"]

[tool.mypy]
strict = true

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

exclude = [
    "alembic"
]

[tool.ruff.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]
